<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fuentes="http://schemas.android.com/apk/res/com.aranzazu.appnoites"
  	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	 android:background="@drawable/hoja2">
	<LinearLayout
	xmlns:fuentes="http://schemas.android.com/apk/res/com.aranzazu.appnoites"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    	<com.aranzazu.appnoites.CustomTextView 
    	style="@style/texto_inicio1"
    	fuentes:fuente="Myriad"    
    	android:textStyle="bold"
    	android:text="@string/col2"/>
        	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
        style="@style/texto_titulo"
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col3"/>
    	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
    	style="@style/texto_normal_col"    
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col4"/>
    	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
     	style="@style/texto_titulo" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col5"/>
       	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
       style="@style/texto_normal_col" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col6"/>
       	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	    style="@style/texto_titulo" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col7"/>
       	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	 style="@style/texto_normal_col" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col8"/>
      	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	style="@style/texto_titulo" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col9"/>
       	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	  style="@style/texto_normal_col" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col10"/>
      	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	  style="@style/texto_titulo" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:textColor="#491b31"
    	android:text="@string/col11a"/>
       	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	  style="@style/texto_subtitulo" 
	  	android:textColor="#491b31"
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col11"/>
        	<com.aranzazu.appnoites.CustomTextView 
    	fuentes:fuente="Myriad"  
	   style="@style/texto_normal_col" 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
    	android:text="@string/col12"
    	android:textColorLink="#ff0066"
    	android:textColor="#FF0066"/>                
</LinearLayout>
</ScrollView>

    
    
